# gravity_simulator_with_rust

./: Cargo.toml  README.md
shaders/: instance_shader.wgsl
src/: black_hole.rs  create_perfect_shape.rs  instance.rs  lib.rs  main.rs  utils.rs  vertex.rs
