[package]
name = "gravity_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
rand = "0.8.5"
anyhow = "1.0.83"
cgmath = "0.18.0"
soloud = "1.0.2"
cfg-if = "1"
winit = "0.30.0"
env_logger = "0.11.3"
log = "0.4"
wgpu = "0.20.0"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = "0.25.1"
fs_extra = "1.2"
wgpu_glyph = "0.22.0"
glob = "0.3"
tobj = { version = "4.0.2", features = [
    "async",
]}
[build-dependencies]
anyhow = "1.0.71"
fs_extra = "1.2"
glob = "0.3.1"